--- a/RazorPagesPizza/Pages/Pizza.cshtml
+++ b/RazorPagesPizza/Pages/Pizza.cshtml
@@ -1,27 +1,35 @@
 ﻿@page
+@using RazorPagesPizza.Models
 @model RazorPagesPizza.Pages.PizzaModel
 @{
 }
 
-<h1>Pizza List</h1>
-<form method="post">
-    <div class="form-group">
-        <label for="Name">Name</label>
-        <input type="text" asp-for="NewPizza.Name">
-        <label>Size</label>
-        @*  <select id="Size">
-            <option value="small">Small</option>
-            </select>*@
-        <label for="IsGlutenFree">Gluten Free</label>
-        <input type="checkbox" asp-for="NewPizza.IsGlutenFree" />
+<h1>Pizza List 🍕</h1>
+<form method="post" class="card p-3">
+    <div class="form-group mb-0 align-middle">
+        <label asp-for="NewPizza.Name">Name</label>
+        <input type="text" asp-for="NewPizza.Name" class="mr-5">
+        <label asp-for="NewPizza.Size">Size</label>
+        <select asp-for="NewPizza.Size" asp-items="Html.GetEnumSelectList<PizzaSize>()" class="mr-5"></select>
+        <label asp-for="NewPizza.IsGlutenFree">Gluten Free</label>
+        <input type="checkbox" asp-for="NewPizza.IsGlutenFree" class="mr-5">
         <button class="btn btn-primary">Add</button>
     </div>
 </form>
-<table class="table">
+<table class="table mt-5">
+    <thead>
+        <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Size</th>
+            <th scope="col">Gluten Free</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
     @foreach (var pizza in Model.pizzas)
     {
         <tr>
             <td>@pizza.Name</td>
+            <td>@pizza.Size</td>
             <td>@Model.GlutenFreeText(pizza)</td>
             <td>
                 <form method="post" asp-page-handler="Delete" asp-route-id="@pizza.Id">
