Updated form with validation, price

--- a/RazorPagesPizza/Pages/Pizza.cshtml
+++ b/RazorPagesPizza/Pages/Pizza.cshtml
@@ -2,15 +2,21 @@
 @using RazorPagesPizza.Models
 @model RazorPagesPizza.Pages.PizzaModel
 @{
+    ViewData["Title"] = "Pizza List";
 }
 
 <h1>Pizza List 🍕</h1>
 <form method="post" class="card p-3">
+    <div class="row">
+        <div asp-validation-summary="All"></div>
+    </div>
     <div class="form-group mb-0 align-middle">
         <label asp-for="NewPizza.Name">Name</label>
         <input type="text" asp-for="NewPizza.Name" class="mr-5">
         <label asp-for="NewPizza.Size">Size</label>
         <select asp-for="NewPizza.Size" asp-items="Html.GetEnumSelectList<PizzaSize>()" class="mr-5"></select>
+        <label asp-for="NewPizza.Price"></label>
+        <input asp-for="NewPizza.Price" class="mr-5" />
         <label asp-for="NewPizza.IsGlutenFree">Gluten Free</label>
         <input type="checkbox" asp-for="NewPizza.IsGlutenFree" class="mr-5">
         <button class="btn btn-primary">Add</button>
@@ -20,6 +26,7 @@
     <thead>
         <tr>
             <th scope="col">Name</th>
+            <th scope="col">Price</th>
             <th scope="col">Size</th>
             <th scope="col">Gluten Free</th>
             <th scope="col">Delete</th>
@@ -29,6 +36,7 @@
     {
         <tr>
             <td>@pizza.Name</td>
+            <td>@($"{pizza.Price:C}")</td>
             <td>@pizza.Size</td>
             <td>@Model.GlutenFreeText(pizza)</td>
             <td>
@@ -39,3 +47,7 @@
         </tr>
     }
 </table>
+
+@section Scripts {
+<partial name="_ValidationScriptsPartial" />
+}
