--- a/RazorPagesPizza/Pages/_ViewImports.cshtml
+++ b/RazorPagesPizza/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using RazorPagesPizza
+﻿@using RazorPagesPizza
 @namespace RazorPagesPizza.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
